--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,12 @@
+body {
+  background-color: rgb(51, 51, 51);
+  color: whitesmoke;
+  padding-top: 2rem;
+}
+
 .App {
   margin: 0 auto;
-  width: 50%;
-  min-width: 500px;
+  width: 600px;
 }
 
 h1, h2, h3, h4, h5 {
@@ -42,29 +47,37 @@ h1 {
 }
 
 .replay-button {
-  width: 2rem;
-  background-color: aliceblue;
-  padding: 1rem;
+  width: 1.5rem;
+  background-color: whitesmoke;
+  padding: 0.5rem;
   border-radius: 100%;
   border: 1px solid black;
+  cursor: pointer;
+}
+
+.replay-button:hover {
+  background-color: rgb(189, 219, 218);
+  transition: .2s;
 }
 
 .Minefield {
-  background-color: brown;
-  padding: 0.5rem;
+  background-color: rgb(35, 148, 142);
+  padding: 1rem;
   margin-top: 1rem;
+  border-radius: 0.5rem;
+  box-shadow: 0px 0px 15px 5px rgba(0,0,0,0.2);
 }
 
 .board {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-  gap: 0.5rem;
-  height: 70vh;
+  gap: 0.1rem;
+  height: 600px;
 }
 
 .Cell {
-  background-color: rgb(58, 58, 58);
+  background-color: rgb(32, 32, 32);
   width: 100%;
   height: 100%;
   display: flex;
@@ -74,7 +87,7 @@ h1 {
 }
 
 .uncovered {
-  background-color: gray !important;
+  background-color: rgb(146, 146, 146) !important;
 }
 
 .mine-png {
@@ -83,4 +96,19 @@ h1 {
 
 .flag-png {
   width: 2rem;
+}
+
+.Win {
+  width: 600px;
+  height: 600px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(35, 148, 142);
+  padding: 1rem 0;
+  margin-top: 1rem;
+  border-radius: 0.5rem;
+  color: whitesmoke;
+  box-shadow: 0px 0px 15px 5px rgba(0,0,0,0.2);
 }
