--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 body {
   background-color: rgb(51, 51, 51);
-  color: whitesmoke;
+  color: rgb(238, 222, 213);
   padding-top: 2rem;
+  font-family: 'Gugi', cursive;
+  text-shadow: 0px 0px 0.2rem rgb(0, 0, 0);
 }
 
 .App {
@@ -15,6 +17,9 @@ h1, h2, h3, h4, h5 {
 
 h1 {
   margin-bottom: 1rem;
+  color: rgb(141, 116, 100);
+  text-shadow: 0px 0px 1rem rgb(0, 0, 0);
+  font-size: 5rem;
 }
 
 .Minesweeper {
@@ -39,6 +44,8 @@ h1 {
 .header-option {
   display: flex;
   align-items: center;
+  justify-content: center;
+  width: 15%;
 }
 
 .header-img {
@@ -48,20 +55,21 @@ h1 {
 
 .replay-button {
   width: 1.5rem;
-  background-color: whitesmoke;
+  background-color: rgb(238, 222, 213);
   padding: 0.5rem;
   border-radius: 100%;
-  border: 1px solid black;
+  border: 1px solid rgb(141, 116, 100);
   cursor: pointer;
+  box-shadow: 0px 0px 1rem 0px rgba(0,0,0,0.5);
 }
 
 .replay-button:hover {
-  background-color: rgb(189, 219, 218);
+  background-color: rgb(141, 116, 100);
   transition: .2s;
 }
 
 .Minefield {
-  background-color: rgb(35, 148, 142);
+  background-color: rgb(100, 76, 60);
   padding: 1rem;
   margin-top: 1rem;
   border-radius: 0.5rem;
@@ -83,11 +91,11 @@ h1 {
   display: flex;
   align-items: center;
   justify-content: center;
-  color: whitesmoke;
+  color: rgb(238, 222, 213);
 }
 
 .uncovered {
-  background-color: rgb(146, 146, 146) !important;
+  background-color: rgb(141, 116, 100) !important;
 }
 
 .mine-png {
@@ -105,10 +113,10 @@ h1 {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: rgb(35, 148, 142);
+  background-color: rgb(141, 116, 100);
   padding: 1rem 0;
   margin-top: 1rem;
   border-radius: 0.5rem;
-  color: whitesmoke;
+  color: rgb(238, 222, 213);
   box-shadow: 0px 0px 15px 5px rgba(0,0,0,0.2);
 }
