--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,14 @@ h1 {
   font-size: 5rem;
 }
 
+h2 {
+  font-size: 3rem;
+}
+
+h3 {
+  font-size: 2rem;
+}
+
 .Minesweeper {
   width: 100%;
 }
@@ -113,7 +121,7 @@ h1 {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: rgb(141, 116, 100);
+  background-color: rgb(100, 76, 60);
   padding: 1rem 0;
   margin-top: 1rem;
   border-radius: 0.5rem;
